tests/ui/block-result/unexpected-return-on-unit.stderr
error[E0308]: mismatched types
  --> $DIR/unexpected-return-on-unit.rs:9:5
   |
LL |     foo()
   |     ^^^^^ expected `()`, found `usize`
   |
note: the function foo is defined here
  --> $DIR/unexpected-return-on-unit.rs:4:1
   |
LL | fn foo() -> usize {
   | ^^^^^^^^^^^^^^^^^
help: consider using a semicolon here
   |
LL |     foo();
   |          +
help: try adding a return type
   |
LL | fn bar() -> usize {
   |          ++++++++
help: consider changing foo's return type
   |
LL | fn foo() -> () {
   |             ~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
